# PMCT

./: README.md  pyproject.toml
src/database/: db_connection.py
src/lanci/boso/: boso_file_reader.py  boso_utils.py  boso_web_scraper.py
src/lanci/dm/: dm_file_reader.py  dm_utils.py  dm_web_scraper.py
src/lanci/eurospin/: eurospin_file_reader.py  eurospin_utils.py  eurospin_web_scraper.py
src/lanci/kaufland/: kaufland_file_reader.py  kaufland_utils.py  kaufland_web_scraper.py
src/lanci/konzum/: konzum_file_reader.py  konzum_utils.py  konzum_web_scraper.py
src/lanci/ktc/: ktc_file_reader.py  ktc_utils.py  ktc_web_scraper.py
src/lanci/lidl/: lidl_file_reader.py  lidl_utils.py  lidl_web_scraper.py
src/lanci/metro/: metro_file_reader.py  metro_utils.py  metro_web_scraper.py
src/lanci/ntl/: ntl_file_reader.py  ntl_utils.py  ntl_web_scraper.py
src/lanci/plodine/: plodine_file_reader.py  plodine_utils.py  plodine_web_scraper.py
src/lanci/ribola/: ribola_file_reader.py  ribola_utils.py  ribola_web_scraper.py
src/lanci/spar/: spar_file_reader.py  spar_utils.py  spar_web_scraper.py
src/lanci/studenac/: studenac_file_reader.py  studenac_utils.py  studenac_web_scraper.py
src/lanci/tommy/: tommy_file_reader.py  tommy_utils.py  tommy_web_scraper.py
src/lanci/trgocentar/: trgocentar_file_reader.py  trgocentar_utils.py  trgocentar_web_scraper.py
src/lanci/trgovina_krk/: trgovina_krk_file_reader.py  trgovina_krk_utils.py  trgovina_krk_web_scraper.py
src/lanci/vrutak/: vrutak_file_reader.py  vrutak_utils.py  vrutak_web_scraper.py
src/lanci/zabac/: zabac_file_reader.py  zabac_utils.py  zabac_web_scraper.py
src/logger/: Logger.py
src/models/: TrgovackiLanci.py
src/schemas/: CijenaDTO.py  DatotekaDTO.py  ProdajniObjektDTO.py
src/utils/: file_encoding.py  send_mail.py
src/utils/data/: data_utils.py
src/utils/db/: db_utils.py
src/utils/web/: web_utils.py
